fix: changes in gem display

--- a/Classic Arcade Game/index.html
+++ b/Classic Arcade Game/index.html
@@ -79,16 +79,24 @@
                         <!--row starts-->
                         <div class="row navigation-menu">
 
-                            <!--modal content player score, timetaken-->
+                            <!--modal content player score-->
                             <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 mt-2">
                                 <h4 class="heading4 text-center">Score :</h4>
                             </div>
-
+                           
                             <!--dynamically generated score-->
                             <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 mt-2">
                                 <p class="highscore text-center"></p>
                             </div>
 
+                            <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 mt-2">
+                                <h4 class="heading4 text-center">Gem Awarded :</h4>
+                            </div>
+
+                            <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 mt-2">
+                                <span class="gem"></span>
+                            </div>
+                        
                         </div>
                         <!--row ends-->
 
