--- a/Classic Arcade Game/index.html
+++ b/Classic Arcade Game/index.html
@@ -173,6 +173,7 @@
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <script src="js/sound.js"></script>
 
 
 </body>
